daemon: rename native-routing-cidr option to ipv4-native-routing-cidr
And mark native-routing-cidr as deprecated.

Signed-off-by: Gilberto Bertin <gilberto@isovalent.com>

--- a/install/kubernetes/cilium/templates/cilium-configmap.yaml
+++ b/install/kubernetes/cilium/templates/cilium-configmap.yaml
@@ -481,7 +481,7 @@ data:
 {{- end }}
 
 {{- if hasKey .Values "nativeRoutingCIDR" }}
-  native-routing-cidr: {{ .Values.nativeRoutingCIDR }}
+  ipv4-native-routing-cidr: {{ .Values.nativeRoutingCIDR }}
 {{- end }}
 
 {{- if hasKey .Values "fragmentTracking" }}
