--- a/install/kubernetes/cilium/templates/cilium-configmap.yaml
+++ b/install/kubernetes/cilium/templates/cilium-configmap.yaml
@@ -482,6 +482,8 @@ data:
 
 {{- if hasKey .Values "nativeRoutingCIDR" }}
   ipv4-native-routing-cidr: {{ .Values.nativeRoutingCIDR }}
+{{- else if hasKey .Values "ipv4NativeRoutingCIDR" }}
+  ipv4-native-routing-cidr: {{ .Values.ipv4NativeRoutingCIDR }}
 {{- end }}
 
 {{- if hasKey .Values "fragmentTracking" }}
